--- a/E14-LSTM_ENTREGA.ipynb
+++ b/E14-LSTM_ENTREGA.ipynb
@@ -20,21 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/esteban/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import pandas as pd\n",
     "import nltk\n",
     "nltk.download('stopwords')\n",
@@ -1284,7 +1273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Toquenizamos los datos para sacar la matriz final que ingresa al modelo"
+    "Toquenizamos para reconocer las palabras y poder sacar la matriz final que ingresa al modelo"
    ]
   },
   {
@@ -1322,6 +1311,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se carga el embeding golve para hacer la representación matricial de los datos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1332,7 +1328,7 @@
     "from numpy import zeros\n",
     "\n",
     "embeddings_dictionary = dict()\n",
-    "glove_file = open('/home/esteban/Documentos/proyecto2/glove/glove.6B.100d.txt', encoding=\"utf8\")\n",
+    "glove_file = open('glove.6B.100d.txt', encoding=\"utf8\")\n",
     "\n",
     "for line in glove_file:\n",
     "    records = line.split()\n",
@@ -1526,7 +1522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy 0,606"
+    "#### Accuracy 0,606"
    ]
   },
   {
